# perplexity

./: .gitignore  Cargo.toml
src/: error.rs  errors.rs  lib.rs  perplexity.rs  sonar.rs
src/examples/: perplexity_client_example.rs
tests/: test_perplexity.rs
