[package]
name = "perplexity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.41", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
async-stream = "0.3.5"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "tests"
path = "tests/test_perplexity.rs"
